[gd_scene load_steps=6 format=3 uid="uid://dphkacs0de0x1"]

[ext_resource type="PackedScene" uid="uid://di54drxmhgtvw" path="res://scenes/console.tscn" id="1_g3eqt"]
[ext_resource type="Theme" uid="uid://cmi0hfgatqxeb" path="res://theme.tres" id="1_h4aq5"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_y1aws"]
[ext_resource type="PackedScene" uid="uid://c28rwcg8i5b86" path="res://scenes/layer.tscn" id="3_p3wdq"]
[ext_resource type="PackedScene" uid="uid://ciupgv0lgyibr" path="res://scenes/lineLayer.tscn" id="4_8xwiv"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_h4aq5")
script = ExtResource("1_y1aws")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(600, 2.08165e-12)
layout_mode = 2

[node name="console" parent="HBoxContainer/CenterContainer" instance=ExtResource("1_g3eqt")]
custom_minimum_size = Vector2(400, 240)
layout_mode = 2
size_flags_horizontal = 2

[node name="toolBox" type="Panel" parent="HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/toolBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/toolBox/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="settingsLabel" type="Label" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "SETTINGS"

[node name="Control" type="Control" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="frameToggle" type="CheckButton" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "Console"

[node name="crosshairToggle" type="CheckButton" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "Crosshair"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2

[node name="gridLabel" type="Label" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Grid"

[node name="gridSelector" type="OptionButton" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "3x3"
popup/item_1/id = 1
popup/item_2/text = "4x4"
popup/item_2/id = 2

[node name="darkBGButton" type="CheckButton" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
text = "Dark BG"

[node name="CrosshairWidth" type="HBoxContainer" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4"]
visible = false
layout_mode = 2
theme_override_constants/separation = 35

[node name="lineWidthTitle" type="Label" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/CrosshairWidth"]
layout_mode = 2
text = "Width"

[node name="lineWidthSlider" type="HSlider" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/CrosshairWidth"]
custom_minimum_size = Vector2(80, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 5.0
value = 1.0
tick_count = 5

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="layersLabel" type="Label" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "ELEMENTS"

[node name="addSpritesButton" type="Button" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "+ Sprites"

[node name="createTextButton" type="Button" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "+ Text"

[node name="createLineButton" type="Button" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "+ Line"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="layerContainer" type="VBoxContainer" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="demoLayer" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/ScrollContainer/layerContainer" groups=["demo"] instance=ExtResource("3_p3wdq")]
layout_mode = 2

[node name="demoLayer2" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/ScrollContainer/layerContainer" groups=["demo"] instance=ExtResource("3_p3wdq")]
layout_mode = 2

[node name="demoLine" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/ScrollContainer/layerContainer" groups=["demo"] instance=ExtResource("4_8xwiv")]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="cursorPosTitle" type="Label" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cursor Position:"

[node name="cursorPosLabel" type="Label" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "400,240"
horizontal_alignment = 2

[node name="Control" type="Control" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="exportAllButton" type="Button" parent="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Export All"

[node name="FileDialog" type="FileDialog" parent="."]
mode = 2
title = "Import Image File(s)"
initial_position = 2
size = Vector2i(400, 400)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 1
access = 2

[node name="CodeWindow" type="Window" parent="."]
title = "Copy this code to your project!"
initial_position = 1
size = Vector2i(450, 200)
visible = false

[node name="TextEdit" type="TextEdit" parent="CodeWindow"]
offset_left = 4.0
offset_top = 4.0
offset_right = 446.0
offset_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Here ist where your code will be when you've added some elements. Remember to adjust it to your needs!"
wrap_mode = 1

[connection signal="toggled" from="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxContainer/frameToggle" to="." method="_on_frame_toggle_toggled"]
[connection signal="toggled" from="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxContainer/crosshairToggle" to="." method="_on_crosshair_toggle_toggled"]
[connection signal="item_selected" from="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxContainer2/gridSelector" to="." method="_on_grid_selector_item_selected"]
[connection signal="toggled" from="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxContainer2/darkBGButton" to="." method="_on_dark_bg_button_toggled"]
[connection signal="drag_ended" from="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/CrosshairWidth/lineWidthSlider" to="." method="_on_line_width_slider_drag_ended"]
[connection signal="value_changed" from="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer4/CrosshairWidth/lineWidthSlider" to="." method="_on_line_width_slider_value_changed"]
[connection signal="pressed" from="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer3/addSpritesButton" to="." method="_on_add_sprites_button_pressed"]
[connection signal="pressed" from="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer3/createTextButton" to="." method="createText"]
[connection signal="pressed" from="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer3/createLineButton" to="." method="createLine"]
[connection signal="pressed" from="HBoxContainer/toolBox/MarginContainer/VBoxContainer/HBoxContainer/exportAllButton" to="." method="_on_export_all_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="filesDropped"]
[connection signal="files_selected" from="FileDialog" to="." method="filesDropped"]
[connection signal="close_requested" from="CodeWindow" to="." method="_on_code_window_close_requested"]
